--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deps"]
 	path = deps
-	url = git@github.com:TeamAntumbra/antumbra-deps
+	url = https://github.com/TeamAntumbra/antumbra-deps
